ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  proxy_set_header Authorization "ApiKey ${SERVICE_API_KEY}";
    #  proxy_set_header Upgrade $http_upgrade;
    #  proxy_set_header Connection $connection_upgrade;
spec:
  ingressClassName: nginx
  rules:
  - host: 209.182.239.81.nip.io
    http:
      paths:
      - path: /api/tickets(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ticket-service
            port:
              number: 3005
      - path: /api/status(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: status-service
            port:
              number: 4001
      - path: /api/users(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3003
      - path: /api/files(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: downloader-service
            port:
              number: 3004
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: ticket-service
            port:
              number: 3005

  - host: minio.209.182.239.81.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9001

  - host: minio-api.209.182.239.81.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
